--- a/templates/index.html
+++ b/templates/index.html
@@ -257,7 +257,7 @@
   <!-- Footer -->
 <footer>
     <div class="footer-content">
-        <p class="copyright">&copy; Designed by Sandipan </p>
+        <p class="copyright">&copy; 2025 Developed with 💙 by Sandipan </p>
     </div>
 </footer>
 
