--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="about-content">
                         <h3 class="highlight">Who am I?</h3>
-                        <p>I am an Electrical and Electronics Engineering student with a strong passion for coding and technology. A tech enthusiast at heart, I am currently delving into Machine Learning and Deep Learning, driven by a desire to create impactful and innovative solutions</p>
+                        <p>I’m a 3rd-year Electrical and Electronics Engineering student passionate about coding and technology. Currently exploring Machine Learning and Deep Learning, I’m driven to create practical, impactful solutions through innovation.</p>
                         <!-- Stats section removed -->
                     </div>
                 </div>
